Defer tests passed

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,9 +16,10 @@ macro (add_executable _name)
 endmacro()
 
 include_directories(include)
-add_library(asyncc STATIC threadpool.c future.c err.c queue.c)
+add_library(asyncc STATIC threadpool.c future.c queue.c err.c)
 add_executable(macierz macierz.c)
 add_executable(silnia silnia.c)
+add_executable(defer1 test/defer1.c)
 add_subdirectory(test)
 
 install(TARGETS asyncc DESTINATION .)
