--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -6,6 +6,15 @@ add_test(test_defer test_defer)
 add_executable(test_await await.c)
 add_test(test_await test_await)
 
+add_executable(test_defer1 defer1.c)
+add_test(test_defer1 test_defer1)
+
+add_executable(test_await1 await1.c)
+add_test(test_await1 test_await1)
+
+add_executable(test_antonizewierzejew test_antonizewierzejew.c)
+add_test(test_antonizewierzejew test_antonizewierzejew)
+
 set_tests_properties(test_defer test_await PROPERTIES TIMEOUT 1)
 
 configure_file(${CMAKE_SOURCE_DIR}/test/macierz.sh.in tmp/macierz.sh)
